# jiminy_ros

./: .gitignore  JAIR_COMPATIBILITY_NOTES.md  LICENSE  README.md
.github/: Doxyfile
.github/workflows/: humble-build-test.yml  iron-build-test.yml  jazzy-build-test.yml  kilted-build-test.yml  rolling-build-test.yml
docs/: JAIR_COMPATIBILITY_NOTES.md
docs/testing/: TEST_QUICK_REFERENCE.md  TEST_SUITE_DOCUMENTATION.md
examples/: load_scenario_example.sh
jiminy_bringup/: CMakeLists.txt  package.xml
jiminy_bringup/launch/: jiminy.launch.py
jiminy_bringup/scenarios/: agrobot3.yaml
jiminy_msgs/: CMakeLists.txt  package.xml
jiminy_msgs/msg/: Fact.msg  Norm.msg  Scenario.msg  ScenarioFull.msg  Semantics.msg
jiminy_msgs/srv/: GetScenario.srv  LoadScenario.srv
jiminy_ros/: CMakeLists.txt  package.xml
jiminy_ros/include/jiminy_ros/: jiminy.hpp  jiminy_node.hpp
jiminy_ros/scenarios/: agrobot.yaml
jiminy_ros/scenarios/agriculture_demo/: demo_grounded.yaml
jiminy_ros/src/: jiminy_main.cpp
jiminy_ros/src/jiminy_ros/: jiminy.cpp  jiminy_node.cpp
jiminy_ros/test/: test_integration_jiminy.cpp  test_jiminy.cpp  test_jiminy_node.cpp
jiminy_terminal/: CMakeLists.txt  package.xml
jiminy_terminal/include/jiminy_terminal/: terminal.hpp
jiminy_terminal/src/: terminal_node.cpp
jiminy_terminal/src/jiminy_terminal/: terminal.cpp
mini_jiminy/: CMakeLists.txt  package.xml
mini_jiminy/include/mini_jiminy/: mini_jiminy.hpp  mini_jiminy_node.hpp
mini_jiminy/src/: mini_jiminy_main.cpp
mini_jiminy/src/mini_jiminy/: mini_jiminy.cpp  mini_jiminy_node.cpp
mini_jiminy/test/: test_jiminy.cpp  test_jiminy_node.cpp
mini_jiminy_bringup/: CMakeLists.txt  package.xml
mini_jiminy_bringup/launch/: mini_jiminy.launch.py
mini_jiminy_bringup/scenarios/: agrobot4.yaml  agrobot_2.yaml  candy_unified.yaml  escenario.yaml  escenario_dulces_antes_de_comer.yaml  escenario_dulces_despues_de_comer.yaml  jair.yaml  scenario_one.yaml
mini_jiminy_bringup/scenarios/agriculture_demo/: demo_stable.yaml
mini_jiminy_bringup/scenarios/demo_agricola/: demo_preferred.yaml  demo_priority.yaml
mini_jiminy_msgs/: CMakeLists.txt  package.xml
mini_jiminy_msgs/msg/: BasePriority.msg  Contrary.msg  MetaPriority.msg  Priority.msg
mini_jiminy_msgs/srv/: CallJiminy.srv
test/: README.md  __init__.py  run_tests.sh
test/integration/: __init__.py  test_jiminy_reasoning.py  test_load_scenario_service.py
test/scripts/: run_all_tests.sh
