<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jiminy_ros</name>
  <version>0.0.0</version>
  <description>Jiminy ROS 2 package</description>
  <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>jiminy_msgs</depend>
  <depend>yaml-cpp</depend>
  <build_depend>ros_environment</build_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>